deploy/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway
spec:
  ports:
    - {name: http, port: 80, targetPort: http}
